    - Added new Armour, Tech & Recipe Icons Textures for Mk6-7. More is coming.
    - RampantArsenalFixed & mech-armour Recipe.
    - Made progression changes to Metal & Stars to go along with this mod.
    - Added 2 new instances of tips & tricks. So if you have the right mods enabled they should eventually trigger.(SpaceAge, Metal&Stars).
  Changes:
    - Requires CAS Version 1.5.12. Due to texture file name changes.
    - [space-age] Electromagnetic Mech crafting. Can use Electromagnetic Plant to craft sarcophagus.
    - [space-age] Recipes are now using new crafting category from MK1-5 and 6-10 requires assembly 2 or electromagnetic-plant.
    - Achievement text make more sense.
    - Start of base game towards PAR will now have crafting triggers over science research.
    - PA&R's Tips Info changed please read again for the new message.
    - Rampant's Mech Suit resistances changed, Made combat Mech Suit craft able with PAR.
    - Nanobots refined: 5 at Night Immunity 1. 
    - Added ParSpaceAge Extension disabled Function to code point not needed when mod addon is active.
    - NVG's Darkness Systems Now require more than 75% on MK1 & 35% for MK2.
    - Moved Metal & stars mech suit to PAR's tab if enabled.
    - SE stack change.
    - K2 Recipe compatibility.
  Bugfixes:
    - Temp fix for compatibility recipes.
    - Crash with AAI industries.
    - Bobs tech name crash.
    - Bobs enemies. Artifact in recipes when setting = off not working. 
    - Crash with missing space-age dependency.
    - Broken recycling is finally fixed. Including Reverse Factory.
    - Tech with craft-able unlocks in bobs was using the vanilla circuit not bobs basic can be a soft-lock.
    - Bobs tech soft lock bob-carbon. in combination with Alt_Chemical_Processing.
    - Fixed many spelling errors across the Changelog.
    - Recipe issues from 1.1 (mod version 0.2.xx).
    - Added Nanobots Refined to the compatibility. Made the old ones incompatible.